--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
       <h1><span>A</span> <span>S</span>OFTWARE <span>E</span>NGINEER</h1>
       <h3> A software engineer in veritas university. Attended this year <br>
         and currently in 100 level and still in <br>studying process. <br> 
-        <a href ="#"class = "sign">view more</a> 
+        <a href ="about.html"class = "sign">view more</a> 
     </div>
     <div class="icon">
       <a href="https://www.facebook.com/kevin.okoye.3950"><ion-icon name="logo-facebook"></ion-icon></a> &nbsp;
